welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: value ** is not a member of Int
     return Math.abs(21-n)**2
                          ^